--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,6 @@
       box-sizing: border-box;
       transition: all 1s;
       transition-timing-function: cubic-bezier(0.8, 0, 0, 1);
-      overflow: hidden;
     }
 
     #topbar .right p:nth-child(even) {
@@ -297,7 +296,30 @@
       font-family: 'pst';
     }
 
-    .selectascamhr {}
+    .selectascamhr {
+      margin: 0px;
+      padding: 0px;
+      margin-bottom: 5px;
+      margin-top: 5px;
+      opacity: 50%;
+    }
+
+    .datapointspan {
+      font-family: 'pst';
+    font-size: 6px;
+    display: block;
+    width: 100%;
+    background-color: green;
+    color: black;
+    padding: 5px;
+    box-sizing: border-box;
+    }
+
+    #datapoint-trade-list {
+
+      width:40%;
+      padding-bottom:10px!important;
+    }
   </style>
   <link rel="stylesheet" href="zones.css">
   <link rel="stylesheet" href="buildings.css">
@@ -306,7 +328,7 @@
 <body>
   <div id="topbar">
 
-    <div style="float:left;position:absolute">
+    <div style="float:left;position:absolute;overflow:hidden;height:100%;">
 
       <div style="display:none">
         <select id="building-select">
@@ -325,6 +347,14 @@
     </div>
     <div class="right" style="float:right;display:flex;">
       <p id="player-money"> <i class="ri-money-dollar-circle-fill"></i> 0</p>
+      <p id="player-datapoints"><i class="ri-database-2-fill"></i> 0</p>
+      <div id="datapoint-trade-list" uk-dropdown>
+        <ul class="uk-nav uk-dropdown-nav">AVAILABLE DATACHUNK TRADES
+          <hr class = "selectascamhr">
+          <span class = "datapointspan" style = "font-family:'pst'" >DATACHUNKS ARE OBTAINED THROUGH TECH SUPPORT SCAMS.
+            THEY CAN BE USED TO BARTER WITH THIRD-PARTIES FOR POTENTIALLY HIGHER PAYOUTS.</span>
+        </ul>
+      </div>
       <p id="player-level"><i class="ri-shield-fill"></i> 00</p>
       <p id="employee-count"><i class="ri-user-5-fill"></i> 0</p>
       <p id="building-count"><i class="ri-hotel-fill"></i> 0</p>
@@ -353,6 +383,7 @@
   <script src="buildingAppearance.js"></script>
   <script src="buildingGen.js"></script>
   <script src="tippyConfig.js"></script>
+  <script src="scams.js"></script>
   <script>
 
     var unlockable_options = `
@@ -386,38 +417,6 @@
       }
     }
 
-    function runCreditCardScam() {
-  const classRoll = Math.random();
-  const isPoor = classRoll < 0.4;
-  const isRich = classRoll < 0.3;
-
-  const person = {
-    class: isPoor ? "poor" : isRich ? "rich" : "middle",
-    money: Math.floor(Math.random() * (isPoor ? 2000 : isRich ? 50000 : 7000) + (isPoor ? 500 : isRich ? 20000 : 3000)),
-    defense: Math.floor(Math.random() * (isPoor ? 20 : 40)) + 1 // Lowered maximum defense score
-  };
-
-  person.defense = Math.max(0, person.defense - person.defense * (player.persuasiveness * 0.15)); // Increased impact of persuasiveness
-
-  const randomNumbers = Array.from({length: 3}, () => Math.floor(Math.random() * (player.persuasiveness * 2)) ); // Increased range of random numbers
-  const scamSucceeded = randomNumbers.some(num => num > person.defense);
-
-  if (scamSucceeded) {
-    const cut = person.money;
-    updateBalance("add", Math.ceil(cut));
-    player.persuasiveness +=1;
-    return `scam succeeded, player got ${cut} dollars`;
-  } else {
-    const consolation = (person.money / 2) * 0.01;
-    player.persuasiveness+= 0.0025;
-    updateBalance("add", Math.floor(consolation));
-    return `scam failed, player got ${consolation} dollars`;
-  }
-}
-
-    function runTechSupport(scam) {
-      console.log("running tech support");
-    }
 
     // update the player's balance based on input
     function updateBalance(operation, amount) {
@@ -669,7 +668,7 @@
       //update the calendar widget, make sure that there's at least two digits for the day
       document.getElementById("calendar_day").innerHTML = currentDayInt.toString().padStart(2, '0');
 
-    }, testDailyMillisecondValue);
+    }, dailyMillisecondValue);
 
     var monthlyInterval = setInterval(function () {
       // Monthly operations here...
@@ -698,7 +697,7 @@
 
       //update the calendar widget
       document.getElementById("calendar_month").innerHTML = months[currentMonthInt];
-    }, testMonthlyMillisecondValue);
+    }, monthlyMillisecondValue);
 
 
 
