--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,7 @@
     .tippy-arrow {
       background-color: #000 !important;
       color: #000 !important;
+      transform:scale(1.5);
     }
 
     [data-tippy-root] {
