--- a/src/index.html
+++ b/src/index.html
@@ -122,11 +122,11 @@
       transition-timing-function: cubic-bezier(0.8, 0, 0, 1);
     }
 
-    #topbar .right p:nth-child(even) {
+    #topbar .right p:nth-child(2n) {
       background-color: transparent;
     }
 
-    #topbar .right p:nth-child(odd) {
+    #topbar .right p:nth-child(2n+1) {
       background-color: #1a1a1a;
     }
 
@@ -141,11 +141,11 @@
       padding-right: 10px;
       white-space: normal;
       border: 5px solid transparent;
-      cursor:pointer;
+      cursor: pointer;
     }
 
     #topbar .right p:hover {
-      background-color:#1a1a1aa0;
+      background-color: #1a1a1aa0;
     }
 
     #topbar .right p i {
@@ -188,7 +188,7 @@
     .tippy-arrow {
       background-color: #000 !important;
       color: #000 !important;
-      transform:scale(1.5);
+      transform: scale(1.5);
     }
 
     [data-tippy-root] {
@@ -196,25 +196,28 @@
     }
 
     #world-map {
-      filter: blur(50px);
       transition: filter 1s;
       transition-timing-function: cubic-bezier(0.8, 0, 0, 1);
     }
 
     #topbar .uk-dropdown {
       background-color: black;
-      margin: 0px;
-      padding: 5px;
-      box-shadow: 5px 5px 0px green;
-      text-align: left;
-      box-sizing: border-box;
-      padding-left: 10px;
-      padding-right: 10px;
-      transition: all 0s!important;
+    margin: 0px;
+    padding: 5px;
+    box-shadow: 5px 5px 0px green;
+    text-align: left;
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 0px;
+    transition: all 0s !important;
+    max-height: 80vh;
+    overflow: hidden;
+    overflow-y: auto;
     }
 
     .uk-nav {
-      transition: all 0s!important;
+      transition: all 0s !important;
     }
 
     #topbar .uk-dropdown hr {
@@ -317,20 +320,107 @@
 
     .datapointspan {
       font-family: 'pst';
-    font-size: 6px;
-    display: block;
-    width: 100%;
-    background-color: green;
+      font-size: 7px;
+      display: block;
+      width: 100%;
+      background-color: green;
+      color: black;
+      padding: 5px;
+      box-sizing: border-box;
+    }
+
+    #datapoint-trade-list,
+    #building-index-list,
+    #credit-line-list {
+
+      width: 40%;
+      padding-bottom: 10px !important;
+    }
+
+    .datapoint_trade_listing_item {
+
+      background-color: #1a1a1a;
+      border: 10px solid black;
+      border-left: 0;
+      border-right: 0;
+      width: 100%;
+      overflow: hidden;
+
+    }
+
+    .datapoint_trade_listing_item span {
+      background-color: green;
+      color: black;
+      margin: 0px;
+      padding: 5px;
+      display: block;
+      width: min-content;
+      vertical-align: top;
+      white-space: nowrap;
+      font-family: 'pst';
+      font-size: 6px;
+      font-weight: 900;
+      padding-top: 3px;
+      padding-bottom: 3px;
+      margin-bottom:-10px;
+    }
+
+    .datapoint_trade_listing_item h3 {
+      font-size: 7px;
+      color: green;
+      font-family: 'pst';
+      text-overflow: ellipsis;
+      padding: 5px;
+      border: 1px solid green;
+      margin: 0px;
+      display: block;
+      border-top: 1px solid green;
+    }
+
+    .datapoint_trade_listing_item h4 {
+      display: inline-block;
+      width: 40%;
+      font-family: 'gamer';
+      margin: 5px;
+      padding: 0px;
+      font-size: 20px;
+      color: green;
+      vertical-align: middle;
+      white-space: nowrap;
+      margin-top: -5px;
+      margin-bottom: 0px;
+      margin-right: -5px;
+    }
+
+    .datapoint_trade_listing_item h4 i {
+      font-size: 10px;
+      vertical-align: middle;
+    }
+
+    .datapoint_trade_listing_item button {
+      width: 100%;
+    vertical-align: middle;
+    padding: 2.5px;
+    padding-left: 0px;
+    padding-right: 0px;
+    border: 1px solid green;
     color: black;
-    padding: 5px;
-    box-sizing: border-box;
+    font-family: 'gamer';
+    font-size: 20px;
+    background-color: green;
+    text-align: center;
+    padding-top: 0px;
+    cursor:pointer;
     }
 
-    #datapoint-trade-list {
-
-      width:40%;
-      padding-bottom:10px!important;
+    .datapoint_trade_listing_item button i {
+      vertical-align: unset;
+    font-weight: 900;
+    font-size: 10px;
+    margin: 0px;
+    padding: 0px;
     }
+
   </style>
   <link rel="stylesheet" href="zones.css">
   <link rel="stylesheet" href="buildings.css">
@@ -358,11 +448,19 @@
     </div>
     <div class="right" style="float:right;display:flex;">
       <p id="player-money"> <i class="ri-money-dollar-circle-fill"></i> 0</p>
+      <div id="credit-line-list" uk-dropdown>
+        <ul class="uk-nav uk-dropdown-nav"><span style="font-size:17.5px">AVAILABLE LINES OF CREDIT</span>
+          <hr class="selectascamhr">
+          <span class="datapointspan" id="credit_blurb" style="font-family:'pst'">DOWN ON YOUR LUCK? GET MONEY FAST,
+            OPEN A LINE OF CREDIT! WHAT COULD GO WRONG?</span>
+        </ul>
+      </div>
       <p id="player-datapoints"><i class="ri-database-2-fill"></i> 0</p>
       <div id="datapoint-trade-list" uk-dropdown>
-        <ul class="uk-nav uk-dropdown-nav"><span style = "font-size:17.5px">AVAILABLE DATACHUNK TRADES</span>
-          <hr class = "selectascamhr">
-          <span class = "datapointspan" style = "font-family:'pst'" >DATACHUNKS ARE OBTAINED THROUGH TECH SUPPORT SCAMS.
+        <ul class="uk-nav uk-dropdown-nav"><span style="font-size:17.5px">AVAILABLE DATACHUNK TRADES</span>
+          <hr class="selectascamhr">
+          <span class="datapointspan" id="datachunk_blurb" style="font-family:'pst'">DATACHUNKS ARE OBTAINED THROUGH
+            TECH SUPPORT SCAMS.
             THEY CAN BE USED TO BARTER WITH THIRD-PARTIES FOR POTENTIALLY HIGHER PAYOUTS.</span>
         </ul>
       </div>
@@ -370,9 +468,10 @@
       <p id="employee-count"><i class="ri-user-5-fill"></i> 0</p>
       <p id="building-count"><i class="ri-hotel-fill"></i> 0</p>
       <div id="building-index-list" uk-dropdown>
-        <ul class="uk-nav uk-dropdown-nav"><span style = "font-size:17.5px">YOUR PROPERTIES</span>
-          <hr>
-
+        <ul class="uk-nav uk-dropdown-nav"><span style="font-size:17.5px">YOUR PROPERTIES</span>
+          <hr class="selectascamhr">
+          <span class="datapointspan" id="property_blurb" style="font-family:'pst'">PROPERTIES GENERATE INCOME FOR YOUR
+            BUSINESS, BUT INCUR EXPENSES LIKE RENT OR UTILITIES.</span>
         </ul>
       </div>
     </div>
@@ -431,7 +530,7 @@
 
     // update the player's balance based on input
     function updateBalance(operation, amount) {
-    
+
       if (operation === "add") {
         player.money += amount;
       } else if (operation === "subtract") {
@@ -443,19 +542,19 @@
       document.getElementById("player-money").innerHTML = `<i class="ri-money-dollar-circle-fill"></i> ${player.money.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
     }
 
-        // update the player's balance based on input
-        function updateDatapoints(operation, amount) {
-    
-    if (operation === "add") {
-      player.datapoints += amount;
-    } else if (operation === "subtract") {
-      player.datapoints -= amount;
-    } else {
-      console.log("error");
+    // update the player's balance based on input
+    function updateDatapoints(operation, amount) {
+
+      if (operation === "add") {
+        player.datapoints += amount;
+      } else if (operation === "subtract") {
+        player.datapoints -= amount;
+      } else {
+        console.log("error");
+      }
+      // show the amount that's been added or subtracted
+      document.getElementById("player-datapoints").innerHTML = `<i class="ri-database-2-fill"></i> ${player.datapoints}`;
     }
-    // show the amount that's been added or subtracted
-    document.getElementById("player-datapoints").innerHTML = `<i class="ri-database-2-fill"></i> ${player.datapoints}`;
-  }
 
     function updateLevel() {
       player.level += 1;
@@ -532,6 +631,7 @@
       </select>
         `;
         building.style.animation = "pulse 1s infinite";
+        document.getElementById('property_blurb').style.display = "none";
       } else {
         alert("You don't have enough money to buy this building!");
       }
@@ -560,9 +660,10 @@
         `+ unlockable_options + `
       </select>
         `;
-        building.style.animation = "pulse 1s infinite";
+        building.style.animation = "pulse-rent 1s infinite";
+        document.getElementById('property_blurb').style.display = "none";
       } else {
-        alert("You're screwed actually, you don't have enough money to leave :pensive:");
+        alert("You can't afford rent!");
       }
     }
 
@@ -594,6 +695,10 @@
         `;
         }
         building.style.animation = "none";
+        // if the user has no buildings left, display the blurb again
+        if (player.buildingsIndex.length === 0) {
+          document.getElementById('property_blurb').style.display = "block";
+        }
       } else {
         alert("You already sold this building!");
       }
@@ -627,6 +732,10 @@
         `;
         }
         building.style.animation = "none";
+        // if the user has no buildings left, display the blurb again
+        if (player.buildingsIndex.length === 0) {
+          document.getElementById('property_blurb').style.display = "block";
+        }
       } else {
         alert("You already sold this building!");
       }
@@ -725,6 +834,255 @@
       //update the calendar widget
       document.getElementById("calendar_month").innerHTML = months[currentMonthInt];
     }, monthlyMillisecondValue);
+
+
+
+    // create 5 third-party companies that will occasionally offer datapoint trades to the player.
+    // these companies will have a random chance of offering a trade every 7 days (in-game time)
+    // there are 3 classes of trades: 
+    // 1. high payout, offered for a very limited amount of time (only lasts 7 days)
+    // 2. medium trade, offered for a medium amount of time (lasts 14 days)
+    // 3. low trade, offered for a long amount of time (lasts one month)
+    // 4. rare payout, offered until the end of the month (no matter what day it currently is)
+
+    function randomizePayout(payout) {
+      var variance = payout * 0.1; // Adjust this value to change the range
+      var min = payout - variance;
+      var max = payout + variance;
+      return Math.floor(Math.random() * (max - min + 1) + min);
+    }
+
+    var thirdPartyCompanies = [
+      {
+        name: "FauxBook",
+        trades: [
+          {
+            name: "FauxBook",
+            description: `Hey there [COMPANY]! We're looking for some datachunks to help us improve our VR/AR offerings.
+            If you can provide us with some personal info- I mean, datachunks, we'd be happy to provide payment.`,
+            payout: randomizePayout(100000),
+            duration: 7,
+            rarity: "high",
+            offered: false,
+          },
+          {
+            name: "FauxBook",
+            description: `Greetings [COMPANY]! At Fauxbook, we're always looking to improve our services. With a few of
+            your datachunks, we can continue to provide our users with the best experience possible.`,
+            payout: randomizePayout(50000),
+            duration: 14,
+            rarity: "medium",
+            offered: false,
+          },
+          {
+            name: "Fauxbook",
+            description: `Hello [COMPANY]! We'd like to offer you a chance to earn some money by providing us with your datachunks.`,
+            payout: randomizePayout(25000),
+            duration: 30,
+            rarity: "low",
+            offered: false,
+          },
+          {
+            name: "Mark Puckerzerg",
+            description: `Hey [COMPANY]! It's Mark Puckerzerg, CEO of Fauxbook. Please help me, 
+            I wasted my money on this VR thing and it hasn't panned out too well.`,
+            payout: randomizePayout(1000000),
+            duration: 30,
+            rarity: "rare",
+            offered: false,
+          },
+        ],
+      },
+      {
+        name: "Ex Corp.",
+        trades: [
+          {
+            name: "Ex Corp.",
+            description: `Formerly known as Xitter. Anyway, we're looking to shill some datachunks to our users. Got any to spare?`,
+            payout: randomizePayout(100000),
+            duration: 7,
+            rarity: "high",
+            offered: false,
+          },
+          {
+            name: "Ex Corp.",
+            description: `Hey [COMPANY]! We're totally hip with the kids, show us your dankest datachunks!`,
+            payout: randomizePayout(50000),
+            duration: 14,
+            rarity: "medium",
+            offered: false,
+          },
+          {
+            name: "Ex Corp.",
+            description: `We both know you can't hold onto those datachunks for long. Why not sell them to us?`,
+            payout: randomizePayout(25000),
+            duration: 30,
+            rarity: "low",
+            offered: false,
+          },
+          {
+            name: "Ex Corp.",
+            description: `We'd like to purchase your company. Actually, just kidding. We just want your datachunks.`,
+            payout: randomizePayout(1000000),
+            duration: 30,
+            rarity: "rare",
+            offered: false,
+          },
+        ],
+      },
+
+      // 100010010
+      {
+        name: "Pear",
+        trades: [
+          {
+            name: "Pear",
+            description: `Hello from Pear! We're looking to purchase some datachunks from you.`,
+            payout: randomizePayout(100000),
+            duration: 7,
+            rarity: "low",
+            offered: false,
+          },
+          {
+            name: "Pear",
+            description: `We're always looking to improve our products with your datachunks.`,
+            payout: randomizePayout(50000),
+            duration: 14,
+            rarity: "medium",
+            offered: false,
+          },
+          {
+            name: "Pear",
+            description: `The plot thins. Add your datachunks to the story - consider our offer to purchase them.`,
+            payout: randomizePayout(25000),
+            duration: 30,
+            rarity: "high",
+            offered: false,
+          },
+          {
+            name: "Pear",
+            description: `One more thing... we'd like to make you an offer that's revolutionary.`,
+            payout: randomizePayout(1000000),
+            duration: 30,
+            rarity: "rare",
+            offered: false,
+          },
+        ],
+      }, {
+        name: "GooGoo!",
+        trades: [
+          {
+            name: "GooGoo!",
+            description: `Hello! We're looking to purchase some datachunks from you.`,
+            payout: randomizePayout(100000),
+            duration: 7,
+            rarity: "high",
+            offered: false,
+          },
+          {
+            name: "GooGoo!",
+            description: `We're looking to improve our products with your datachunks.`,
+            payout: randomizePayout(50000),
+            duration: 14,
+            rarity: "medium",
+            offered: false,
+          },
+
+          {
+            name: "GooGoo!",
+            description: `We're looking to improve our products with your datachunks.`,
+            payout: randomizePayout(25000),
+            duration: 30,
+            rarity: "low",
+            offered: false,
+          },
+          {
+            name: "GooGoo!",
+            description: `Sell us your datachunks, and you could win big!`,
+            payout: randomizePayout(1000000),
+            duration: 30,
+            rarity: "rare",
+            offered: false,
+          },
+        ],
+      }, {
+        name: "Michaelsoft",
+        trades: [
+          {
+            name: "MichaelSoft",
+            description: `Hey there [COMPANY]! We're looking for some datachunks to help us improve our products.`,
+            payout: randomizePayout(100000),
+            duration: 7,
+            rarity: "high",
+            offered: false,
+          },
+          {
+            name: "Michaelsoft",
+            description: `We'd like to improve MichaelSoft Office 365 for everyone.
+            Support our endeavors by selling us your datachunks.`,
+            payout: randomizePayout(50000),
+            duration: 14,
+            rarity: "medium",
+            offered: false,
+          },
+          {
+            name: "MichaelSoft",
+            description: `We're looking to improve our range of services with your datachunks.`,
+            payout: randomizePayout(25000),
+            duration: 30,
+            rarity: "low",
+            offered: false,
+          },
+          {
+            name: "Bob Grapes",
+            description: `Hey [COMPANY]! It's Bob Grapes, CEO of Michaelsoft.
+            My wife left me, and I'm looking to buy some datachunks to numb the pain.`,
+            payout: randomizePayout(1000000),
+            duration: 30,
+            rarity: "rare",
+            offered: false,
+          },
+        ],
+      },
+    ];
+
+    // write a function that will occasionally send a trade offer to the player, in the datapoints-trade-list div.
+    // here are the rules:
+    // 1. trades are only sent if the player has over 1000 datapoints.
+    // 2. once the player reaches 5 active trades, no more trades will be sent.
+    // 3. trades are sent randomly, with a 1/10 chance of being sent every 7 days (in-game time) for each company.
+    // 4. once a trade is sent, it will remain in the player's datapoints-trade-list until it expires.
+    // 5. if the player accepts a trade, it is removed from the list, and that specific trade isn't sent again for the rest of the month.
+    // 6. if the player declines a trade, it is removed from the list, and that specific trade isn't sent again for the rest of the week.
+    // 7. if the player accepts a trade, the payout is added to their money balance, and the datapoints are subtracted from their datapoint balance.
+
+    function sendTradeOffer(company) {
+      // get a random trade from the company's trades array
+      var randomTrade = company.trades[Math.floor(Math.random() * company.trades.length)];
+      // check if the player has already been offered this trade
+      if (!randomTrade.offered) {
+        // if not, add it to the list
+        document.getElementById("datapoint-trade-list").innerHTML += `
+        <div class = "datapoint_trade_listing_item" id = "${randomTrade.name.replace(/\s/g, '')}">
+        <span>${randomTrade.name}</span>
+        <h3>${randomTrade.description}</h3>
+        <h4><i class = "ri-money-dollar-circle-fill"></i> ${randomTrade.payout}</h4>
+        <h4><i class="ri-time-fill"></i> ${randomTrade.duration} DAYS</h4>
+        <button onclick = "acceptTrade('${randomTrade.name.replace(/\s/g, '')}', ${randomTrade.payout}, ${randomTrade.duration})" ><i class="ri-check-fill"></i> ACCEPT</button>
+        <button style = "color:green;background-color:transparent" onclick = "document.getElementById('${randomTrade.name.replace(/\s/g, '')}').remove()" ><i class="ri-close-fill"></i> DENY</button>
+        </div>
+        `;
+        // mark the trade as offered
+        randomTrade.offered = true;
+      }
+    }
+
+    // show me how i might use the function above
+    // sendTradeOffer(thirdPartyCompanies[0]);
+
+
+    sendTradeOffer(thirdPartyCompanies[0]);
+    sendTradeOffer(thirdPartyCompanies[1]);
 
 
 
