--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <script>
-        window.location.replace('src/index.html');
-    </script>
+<body>
+    <iframe src="src/index.html"></iframe>
+</body>
 </html>
