fixed a scrolling issue

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,6 @@
       margin: 0;
       padding: 0px;
       width: 100%;
-      overflow: hidden;
       font-family: 'gamer';
       filter: sepia(1) hue-rotate(45deg);
       user-select: none !important;
@@ -74,7 +73,7 @@
 
 
     #navbar {
-      position: fixed;
+      position: absolute;
       bottom: 0;
       z-index: 1000;
       background-color: black;
