--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             body, html {
                 background-color:black;
                 color:white;
+                overflow:hidden;
             }
             #game {
                 aspect-ratio: 1/1;
